--- a/MovilApp/Celulares.xaml
+++ b/MovilApp/Celulares.xaml
@@ -2,13 +2,18 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MovilApp.Celulares">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem IconImageSource="shoppingCart.png" Order="Primary" ></ToolbarItem>
+    </ContentPage.ToolbarItems>
+    
     <ContentPage.Content>
 
         <Grid>
-            <Image Source="Fondo.jpg" Aspect="AspectFill"/>
-            <BoxView Color="SkyBlue" Opacity="0.5" />
+            <Image Source="fondo1.png" Aspect="AspectFill"/>
+            <BoxView Color="#35AAF2" Opacity="0.3" />
             <StackLayout>
-                <Image Grid.Row="0" Source="MovistarLogo.png" WidthRequest="100" HeightRequest="100" Margin="0,50,0,30"/>
+                <Image Grid.Row="0" Source="logo1.png" WidthRequest="150" HeightRequest="150" Margin="0,50,0,30"/>
                 <ListView ItemsSource="{Binding Productos} " HasUnevenRows="True"
                     ItemSelected="ListView_ItemSelected" ItemTapped="ListView_ItemTapped" HorizontalOptions="CenterAndExpand">
                     <ListView.ItemTemplate>
@@ -36,7 +41,8 @@
                     </ListView.ItemTemplate>
                 </ListView>
                 <Label Text=""/>
-                <Button  x:Name="Btnsalir" Text="Salir" BackgroundColor="skyBlue" TextColor="White" BorderRadius="10"/>
+                <Button  x:Name="BtnAgregar" Text="Agregar al carrito" BackgroundColor="#0583F2" TextColor="White" BorderRadius="10"/>
+                <Button  x:Name="Btnsalir" Text="Salir" BackgroundColor="#0583F2" TextColor="White" BorderRadius="10"/>
             </StackLayout>
         </Grid>
 
