--- a/MovilApp/DeBanco.xaml
+++ b/MovilApp/DeBanco.xaml
@@ -4,22 +4,22 @@
              x:Class="MovilApp.DeBanco">
     
     <ContentPage.ToolbarItems>
-        <ToolbarItem IconImageSource="carrito.png" Order="Primary" ></ToolbarItem>
+        <ToolbarItem IconImageSource="shoppingCart.png" Order="Primary" ></ToolbarItem>
     </ContentPage.ToolbarItems>
     
     <ContentPage.Content>
         <Grid>
-            <Image Source="Fondo.jpg"  Aspect="AspectFill"/>
-            <BoxView Color="SkyBlue" Opacity="0.5" />
+            <Image Source="fondo1.png"  Aspect="AspectFill"/>
+            <BoxView Color="#35AAF2" Opacity="0.3" />
             <StackLayout>
-                <Image Grid.Row="0" Source="MovistarLogo.png" WidthRequest="100" HeightRequest="100" Margin="0,50,0,30"/>
-                <Label Text="Movistar Store" FontSize="20" TextColor="White" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
+                <Image Grid.Row="0" Source="logo1.png" WidthRequest="150" HeightRequest="150" Margin="0,50,0,30"/>
+                <Label Text="Menú de opciones" FontSize="20" TextColor="White" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
                 <Label Text=""/>
-                <Button  x:Name="BtnCompra" Text="Compra de Celulares" BackgroundColor="SkyBlue" TextColor="White" BorderRadius="20"/>
+                <Button  x:Name="BtnCompra" Text="Compra de Celulares" BackgroundColor="#0583F2" TextColor="White" BorderRadius="20"/>
                 <Label Text=""/>
-                <Button Text="Configuracion de Cuenta" BackgroundColor="skyBlue" TextColor="White" BorderRadius="20"/>
+                <Button Text="Configuracion de Cuenta" BackgroundColor="#0583F2" TextColor="White" BorderRadius="20"/>
                 <Label Text=""/>
-                <Button  x:Name="Btnsalir" Text="Salir" BackgroundColor="skyBlue" TextColor="White" BorderRadius="10"/>
+                <Button  x:Name="Btnsalir" Text="Salir" BackgroundColor="#0583F2" TextColor="White" BorderRadius="10"/>
             </StackLayout>
         </Grid>
 
