--- a/MovilApp/Admin.xaml
+++ b/MovilApp/Admin.xaml
@@ -13,36 +13,15 @@
 
             <Label x:Name="StatusMessage" FontSize="Medium" />
             <ScrollView Orientation="Horizontal">
-                <ListView x:Name="userList" Margin="10" HeightRequest="650" WidthRequest="1000">
-                    <ListView.ItemTemplate>
+                
+                <ListView x:Name="userList">  
+                    <ListView.ItemTemplate>  
                         <DataTemplate>
-                            <ViewCell>
-                                <Grid  Padding="5" FlowDirection="LeftToRight" RowSpacing="0" ColumnSpacing="0" >
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="100"/>
-                                        <ColumnDefinition Width="100"/>
-                                        <ColumnDefinition Width="100"/>
-                                        <ColumnDefinition Width="100"/>
-                                        <ColumnDefinition Width="100"/>
-                                        <ColumnDefinition Width="100"/>
-                                        <ColumnDefinition Width="100"/>
-                                    </Grid.ColumnDefinitions>
-                                    
-                                    <Label VerticalOptions="Center" HorizontalOptions="StartAndExpand"    Grid.Column="1" Text="{Binding Nombre}" />
-                                    <Label VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="2" Text="{Binding Apellido_Paterno}" />
-                                    <Label VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="3" Text="{Binding Apellido_Materno}" />
-                                    <Label VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="4" Text="{Binding ID}" />
-                                    <Label VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="5" Text="{Binding Telefono}" />
-                                    <Label VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="6" Text="{Binding Fecha_Nacimiento}" />
-                                    <Label VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="7" Text="{Binding Email}" />
-                                    <Label VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="8" Text="{Binding Direccion}" />
-                                    <Label VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="9" Text="{Binding Rol}" />
-
-                                </Grid>
-                            </ViewCell>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
+                            <TextCell Text="{Binding Nombre}" Detail="{Binding Email}"></TextCell>  
+                        </DataTemplate>  
+                    </ListView.ItemTemplate>  
+                </ListView>  
+                
             </ScrollView>
         </StackLayout>
         
