--- a/MovilApp/Individual.xaml
+++ b/MovilApp/Individual.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MovilApp.Individual">
     <ContentPage.Content>
-
-        <Grid>
+        <ScrollView Orientation="Vertical">
+            <Grid>
             <Image Source="fondo1.png" Aspect="AspectFill"/>
             <BoxView Color="#35AAF2" Opacity="0.3" />
             <StackLayout>
@@ -28,6 +28,6 @@
                 <Button  x:Name="BtnAgregar" Text="Agregar al carrito" BackgroundColor="#0583F2" TextColor="White" BorderRadius="10"/>
             </StackLayout>
         </Grid>
-
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
