--- a/MovilApp/MainPage.xaml
+++ b/MovilApp/MainPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MovilApp.MainPage">
-    <Grid>
+    <ScrollView Orientation="Vertical">
+        <Grid>
         <Image Source="fondo1.jpg" Aspect="AspectFill"/>
         <BoxView Color="#35AAF2" Opacity="0.3" />
         <Grid >
@@ -28,4 +29,5 @@
             </StackLayout>
         </Grid>
     </Grid>
+    </ScrollView>
 </ContentPage>
