--- a/MovilApp/Recuperar.xaml
+++ b/MovilApp/Recuperar.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MovilApp.Recuperar">
     <ContentPage.Content>
-
-        <Grid>
+        <ScrollView Orientation="Vertical">
+            <Grid>
             <Image Source="fondo1.jpg" Aspect="AspectFill"/>
             <BoxView Color="#35AAF2" Opacity="0.3" />
             <Grid>
@@ -43,6 +43,6 @@
             </Grid>
 
         </Grid>
-
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
