--- a/MovilApp/Preview.xaml
+++ b/MovilApp/Preview.xaml
@@ -2,58 +2,86 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MovilApp.Preview">
-
+    
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Terminar" x:Name="btnTerminar" Order="Primary" ></ToolbarItem>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
-        <StackLayout>
-            
-            <ScrollView Orientation="Vertical">
-                <Grid>
-                    <Image Source="fondo1.png" Aspect="AspectFill"/>
-                    <BoxView Color="#35AAF2" Opacity="0.3" />
-                    <StackLayout>
-                        <Image Grid.Row="0" Source="logo1.png" WidthRequest="150" HeightRequest="150" Margin="0,50,0,30"/>
-                        <Label Text="Preview" FontSize="20" TextColor="White" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
-                        <ListView x:Name="lstPreview" ItemsSource="{Binding Products} " HasUnevenRows="True"
-                      HorizontalOptions="CenterAndExpand">
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <ViewCell>
-                                        <Grid Padding="10">
-                                            <Grid.RowDefinitions>
-                                                <RowDefinition Height="Auto"/>
-                                                <RowDefinition Height="*"/>
-                                            </Grid.RowDefinitions>
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="Auto"/>
-                                                <ColumnDefinition Width="*"/>
-                                            </Grid.ColumnDefinitions>
 
-                                            <Image Grid.RowSpan="2" Source="{Binding IMAGEN}" Aspect="AspectFill" 
+
+        <ScrollView Orientation="Vertical">
+            <Grid>
+            <Image Source="fondo1.png" Aspect="AspectFill"/>
+            <BoxView Color="#35AAF2" Opacity="0.3" />
+                
+            <StackLayout>
+                <Image Grid.Row="0" Source="logo1.png" WidthRequest="150" HeightRequest="150" Margin="0,50,0,30"/>
+                    <Label Text="Proforma" FontSize="20" TextColor="White" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
+                    <Label Text="" ></Label>
+
+                    <Label Text="Detalles del carrito:" FontSize="20" TextColor="White" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
+                    <Label Text=""></Label>
+
+
+                    <Label   x:Name="labelTipoPlan" FontAttributes="Bold" TextColor="White"  />
+                    <Label Text=""></Label>
+
+                    <Label   x:Name="labelInteres" FontAttributes="Bold" TextColor="White"  />
+                    <Label Text=""></Label>
+
+                    <Label   x:Name="labelTotal" FontAttributes="Bold" TextColor="White"  />
+                    <Label Text=""></Label>
+
+                    <Label   x:Name="labelTotalInteres" FontAttributes="Bold" TextColor="White"  />
+                    <Label Text=""></Label>
+
+                    <Label Text="Lista de Productos" FontSize="20" TextColor="White" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
+                    <Label Text=""></Label>
+
+
+                    <ListView x:Name="lstPreview"  HasUnevenRows="True"
+                   HorizontalOptions="CenterAndExpand" >
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                
+                                <ViewCell>
+                                    
+
+                                    <Grid Padding="10">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto"/>
+                                            <RowDefinition Height="*"/>
+                                        </Grid.RowDefinitions>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto"/>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <Image Grid.RowSpan="2" Source="{Binding IMAGEN}" Aspect="AspectFill" 
                                    HeightRequest="60" WidthRequest="60"/>
-                                            <Label Grid.Column="1" Text="{Binding NOMBRE} " FontAttributes="Bold" TextColor="White"  />
-                                            <Label Grid.Row="1" Grid.Column="1" 
+                                        <Label Grid.Column="1" x:Name="labelNombre" Text="{Binding NOMBRE} " FontAttributes="Bold" TextColor="White"  />
+                                        <Label Grid.Row="1" Grid.Column="1" 
                                            Text="{Binding PRECIO, StringFormat='Precio: {0:N} '}"
                                            TextColor="White" 
                                    VerticalOptions="End" />
+                                        
+                                    </Grid>
 
-                                        </Grid>
-                                    </ViewCell>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
-                        <Label Text=""/>
+                                    
+                                </ViewCell>
 
-                    </StackLayout>
-                </Grid>
-            </ScrollView>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                        
+                        
+                        
+                    </ListView>
+                
+                    
 
-        </StackLayout>
-        
-        
-        
+                </StackLayout>
+        </Grid>
+     </ScrollView>
     </ContentPage.Content>
 </ContentPage>
